@@ -857,7 +857,10 @@ SCIP_DECL_NLPICHGOBJCONSTANT( nlpiChgObjConstantIpopt )
  * input:
  *  - nlpi datastructure for solver interface
  *  - problem datastructure for problem instance
- *  - values initial starting solution, or NULL to clear previous starting solution
+ *  - primalvalues initial primal values for variables, or NULL to clear previous values
+ *  - consdualvalues initial dual values for constraints, or NULL to clear previous values
+ *  - varlbdualvalues  initial dual values for variable lower bounds, or NULL to clear previous values
+ *  - varubdualvalues  initial dual values for variable upper bounds, or NULL to clear previous values
  */
 static
 SCIP_DECL_NLPISETINITIALGUESS(nlpiSetInitialGuessIpopt)
@@ -866,16 +869,16 @@ SCIP_DECL_NLPISETINITIALGUESS(nlpiSetInitialGuessIpopt)
    assert(problem != NULL);
    assert(problem->oracle != NULL);
 
-   if( values != NULL )
+   if( primalvalues != NULL )
    {
       if( !problem->initguess )
       {
-         if( BMSduplicateMemoryArray(&problem->initguess, values, SCIPnlpiOracleGetNVars(problem->oracle)) == NULL )
+         if( BMSduplicateMemoryArray(&problem->initguess, primalvalues, SCIPnlpiOracleGetNVars(problem->oracle)) == NULL )
             return SCIP_NOMEMORY;
       }
       else
       {
-         BMScopyMemoryArray(problem->initguess, values, SCIPnlpiOracleGetNVars(problem->oracle));
+         BMScopyMemoryArray(problem->initguess, primalvalues, SCIPnlpiOracleGetNVars(problem->oracle));
       }
    }
    else
@@ -1023,24 +1026,24 @@ SCIP_DECL_NLPIGETTERMSTAT(nlpiGetTermstatIpopt)
    return problem->lasttermstat;
 }
 
-/** gives primal solution
+/** gives primal and dual solution values
  * 
  * input:
  *  - nlpi datastructure for solver interface
  *  - problem datastructure for problem instance
- *  - primalvalues pointer to store primal values
- * 
- * output:
- *  - primalvalues primal values of solution
+ *  - primalvalues buffer to store pointer to array to primal values, or NULL if not needed
+ *  - consdualvalues buffer to store pointer to array to dual values of constraints, or NULL if not needed
+ *  - varlbdualvalues buffer to store pointer to array to dual values of variable lower bounds, or NULL if not needed
+ *  - varubdualvalues buffer to store pointer to array to dual values of variable lower bounds, or NULL if not needed
  */
 static
 SCIP_DECL_NLPIGETSOLUTION(nlpiGetSolutionIpopt)
 {
    assert(nlpi != NULL);
    assert(problem != NULL);
-   assert(primalvalues != NULL);
     
-   *primalvalues = problem->lastsol;
+   if( primalvalues != NULL )
+      *primalvalues = problem->lastsol;
    
    return SCIP_OKAY;
 }
