@@ -55,7 +55,8 @@ interface:
 - removed NLP methods from pub_nlp.h and added corresponding methods to scip.h; removed SCIPgetNLP()
 - added method SCIPgetNLPVarsNonlinearity() to get for each variable in the NLP the number of NLP rows in which this variable appears in a nonlinear way
 - added methods SCIPparseVarsLinearsum(), SCIPparseVarsPolynomial() and SCIPwriteVarsPolynomial() and for writing and parsing polynomials in constraint handler writing/parsing methods  
-- new method SCIPsetParam() which is a generic parameter setter method, independent of the parameter type 
+- new method SCIPsetParam() which is a generic parameter setter method, independent of the parameter type
+- the callbacks NLPIGETSOLUTION and NLPISETINITIALGUESS and the functions SCIPnlpiGetSolution() and SCIPnlpiSetInitialGuess() now also take arguments to get/set dual values
 
 performance improvements:
 - performance improvements in prop_vbounds
